samples/_failures_safe/1761349646_9dcb42_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1452196e.c: In function ‘main’:
./samples/SAFE/__tmp_1452196e.c:154:9: error: expected expression at end of input
  154 |         for (int i = 0; i < token_count;
      |         ^~~
./samples/SAFE/__tmp_1452196e.c:154:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1452196e.c:154:9: error: expected declaration or statement at end of input
